--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   circular_image: ^0.0.6
-  fontresoft: ^0.0.3
+  fontresoft: ^0.0.5
   flutter_rating_bar: ^4.0.1
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
