--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  fontresoft: ^0.0.5
+  extensionresoft: ^0.0.6
   cupertino_icons: ^1.0.8
   circular_image: ^0.0.6
-  fontresoft: ^0.0.5
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.0
+  fluttertoast: ^8.2.5
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
