--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-  build_runner: ^2.4.10
-  glob: ^2.1.2
+#  build_runner: ^2.4.10
+#  glob: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
