--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   fontresoft: ^0.0.5
   extensionresoft: ^0.0.6
+#  payment_card: ^0.0.1
   cupertino_icons: ^1.0.8
-  http: ^1.2.2
 
+#  http: ^1.2.2
+  stripe: ^4.11.0
+  flutter_secure_storage: ^9.2.2
+
+  bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
 
@@ -45,7 +50,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
-#  fluttertoast: ^8.2.5
+  fluttertoast: ^8.2.8
 
 
 dev_dependencies:
