--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
   fluttertoast: ^8.2.8
+  shimmer: ^3.0.0
 
 
 dev_dependencies:
