--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   http: ^1.2.2
-#  stripe: ^4.11.0
-  flutter_stripe: ^11.0.0
+#  flutter_stripe: ^11.0.0
   flutter_secure_storage: ^9.2.2
 
   bloc: ^8.1.4
@@ -53,6 +52,11 @@ dependencies:
   flutter_screenutil: ^5.9.3
   fluttertoast: ^8.2.8
   shimmer: ^3.0.0
+  lottie: ^3.1.2
+
+
+  rename_app: ^1.6.1
+  change_app_package_name: ^1.3.0
 
 
 dev_dependencies:
@@ -83,6 +87,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
