--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   http: ^1.2.2
+  socket_io_client: ^2.0.3+1
 #  flutter_stripe: ^11.0.0
   flutter_secure_storage: ^9.2.2
 
