--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   extensionresoft: ^0.0.6
 #  payment_card: ^0.0.1
   flutter_secure_storage: ^9.2.2
+  flutter_dotenv: ^5.1.0
   cupertino_icons: ^1.0.8
 
   http: ^1.2.2
