--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,13 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  logger: ^2.4.0
+  mockito: ^5.4.4
 
   path_provider: ^2.1.4
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
+  flutter_local_notifications: ^17.2.2
 
   circular_image: ^0.0.6
   flutter_rating_bar: ^4.0.1
@@ -94,6 +97,8 @@ flutter:
     - assets/
     - assets/images/
     - assets/animations/
+    - .env.dev
+    - .env.prod
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
