--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   fontresoft: ^0.0.5
-  extensionresoft: ^0.0.6
+  #  extensionresoft: ^0.0.6
+  extensionresoft:
+    path: ../../packages/extensionresoft
 #  payment_card: ^0.0.1
   flutter_secure_storage: ^9.2.2
   flutter_dotenv: ^5.1.0
@@ -78,7 +80,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-#  build_runner: ^2.4.10
+  build_runner: ^2.4.12
 #  glob: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
