--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   http: ^1.2.2
-  socket_io_client: ^2.0.3+1
+  socket_io_client: ^3.0.0
 #  flutter_stripe: ^11.0.0
 
   bloc: ^8.1.4
@@ -77,7 +77,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 #  glob: ^2.1.2
 
