Completed fixing and implementation of Stripe Payment API.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="Vintiora"
         android:name="${applicationName}"
         android:enableOnBackInvokedCallback="true"
+        android:theme="@style/Theme.AppCompat.Light"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
