--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,12 @@ dependencies:
     path: ../../packages/extensionresoft
 #  payment_card: ^0.0.1
   flutter_secure_storage: ^9.2.2
-  flutter_dotenv: ^5.1.0
+  flutter_dotenv: ^5.2.1
   cupertino_icons: ^1.0.8
 
   http: ^1.2.2
   socket_io_client: ^3.0.0
-#  flutter_stripe: ^11.0.0
+  flutter_stripe: ^11.2.0
 
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
@@ -62,7 +62,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   fluttertoast: ^8.2.8
   shimmer: ^3.0.0
-  lottie: ^3.1.2
+  lottie: ^3.1.3
+  badges: ^3.1.2
 
 
   rename_app: ^1.6.1
