--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,32 +31,36 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Core
+  cupertino_icons: ^1.0.8
   fontresoft: ^0.0.5
-  #  extensionresoft: ^0.0.6
   extensionresoft:
     path: ../../packages/extensionresoft
-#  payment_card: ^0.0.1
+
+  # Data
   flutter_secure_storage: ^9.2.2
   flutter_dotenv: ^5.2.1
-  cupertino_icons: ^1.0.8
 
+  # Network
   http: ^1.2.2
   socket_io_client: ^3.0.0
   flutter_stripe: ^11.2.0
 
+  # State
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   hydrated_bloc: ^9.1.5
   equatable: ^2.0.5
   logger: ^2.4.0
 
+  # Platform
   path_provider: ^2.1.4
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
-  flutter_local_notifications: ^17.2.3
+  flutter_local_notifications: ^17.2.4
+  share_plus: ^10.1.1 # Confirm before you update to latest version.. had a bug to be fixed by the developers.
 
+  # UI
   circular_image: ^0.0.6
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
@@ -65,7 +69,7 @@ dependencies:
   lottie: ^3.1.3
   badges: ^3.1.2
 
-
+  # Package
   rename_app: ^1.6.1
   change_app_package_name: ^1.4.0
 
