--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: wine_delivery_app
-description: "A new Flutter project."
+description: "Wine Delivery App"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -33,9 +33,9 @@ dependencies:
 
   # Core
   cupertino_icons: ^1.0.8
-  fontresoft: ^0.0.5
+  fontresoft: ^0.0.5 # Update needed
   extensionresoft:
-    path: ../../packages/extensionresoft
+    path: ../../packages/extensionresoft # Unreleased pub version.
 
   # Data
   flutter_secure_storage: ^9.2.2
@@ -58,7 +58,7 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   flutter_local_notifications: ^17.2.4
-  share_plus: ^10.1.1 # Confirm before you update to latest version.. had a bug to be fixed by the developers.
+  share_plus: ^10.1.1
 
   # UI
   circular_image: ^0.0.6
@@ -72,7 +72,6 @@ dependencies:
   # Package
   rename_app: ^1.6.1
   change_app_package_name: ^1.4.0
-
 
 dev_dependencies:
   flutter_test:
