--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   http: ^1.2.2
   socket_io_client: ^3.0.0
   flutter_stripe: ^11.2.0
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
 
   # State
   bloc: ^8.1.4
