--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ migrate_working_dir/
 /build/
 .env.prod
 .env.dev
+lib/firebase_options.dart
+firebase.json
+android/app/google-services.json
 
 # Symbolication related
 app.*.symbols
