--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   http: ^1.2.2
   socket_io_client: ^3.0.0
   flutter_stripe: ^11.2.0
+#  googleapis: ^13.2.0
+#  extension_google_sign_in_as_googleapis_auth: ^2.0.12
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
 
@@ -56,7 +58,7 @@ dependencies:
   logger: ^2.4.0
 
   # Platform
-  path_provider: ^2.1.4
+  path_provider: ^2.1.5
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   flutter_local_notifications: ^17.2.4
