--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
+    <!-- Custom URL scheme sample -->
+  	<key>CFBundleURLTypes</key>
+  	<array>
+  		<dict>
+  		<!-- Your scheme -->
+  		<key>CFBundleURLSchemes</key>
+  		<array>
+  			<string>app</string>
+  		</array>
+  		<!-- Optional URL to distinguish your app from others
+  		     in case of conflicting scheme name -->
+  		<key>CFBundleURLName</key>
+  		<string>open.my.app</string>
+  		</dict>
+  	</array>
+  	<!-- END Custom URL scheme sample -->
+
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
@@ -45,5 +62,6 @@
     <true/>
     <key>UIApplicationSupportsIndirectInputEvents</key>
     <true/>
+    <key>FlutterDeepLinkingEnabled</key>
   </dict>
 </plist>
