--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
-        android:label="Vintiora"
+        android:label="vintiora"
         android:name="${applicationName}"
         android:enableOnBackInvokedCallback="true"
         android:theme="@style/Theme.AppCompat.Light"
