--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "wine_delivery_app" "\0"
+            VALUE "CompanyName", "com.kenresoft" "\0"
+            VALUE "FileDescription", "vintiora" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "wine_delivery_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "wine_delivery_app.exe" "\0"
-            VALUE "ProductName", "wine_delivery_app" "\0"
+            VALUE "InternalName", "vintiora" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.kenresoft. All rights reserved." "\0"
+            VALUE "OriginalFilename", "vintiora.exe" "\0"
+            VALUE "ProductName", "vintiora" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
