--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: wine_delivery_app
-description: "Wine Delivery App"
+name: vintiora
+description: "Vintiora - An E-commerce wine delivery mobile application."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -20,6 +20,7 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
+#  sdk: ^3.5.3
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -43,11 +44,12 @@ dependencies:
   flutter_dotenv: ^5.2.1
 
   # Network
-  http: ^1.2.2
+  #  http: ^1.2.2
+  dio: ^5.7.0
   socket_io_client: ^3.0.0
   flutter_stripe: ^11.2.0
-#  googleapis: ^13.2.0
-#  extension_google_sign_in_as_googleapis_auth: ^2.0.12
+  #  googleapis: ^13.2.0
+  #  extension_google_sign_in_as_googleapis_auth: ^2.0.12
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
 
@@ -62,8 +64,8 @@ dependencies:
   path_provider: ^2.1.5
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
-  flutter_local_notifications: ^17.2.4
-  device_info_plus: ^11.1.0
+  flutter_local_notifications: ^18.0.0
+  #  device_info_plus: ^11.1.0
   share_plus: ^10.1.1
   os_detect: ^2.0.2
   app_links: ^6.3.2
