--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,54 +34,54 @@ dependencies:
 
   # Core
   cupertino_icons: ^1.0.8
-  font_awesome_flutter: ^10.7.0
+  extensionresoft: ^1.0.0
   fontresoft: ^0.0.5 # Update needed
-  extensionresoft:
-    path: ../../packages/extensionresoft # Unreleased pub version.
+  flutter_bloc: ^9.1.0
+  hydrated_bloc: ^10.0.0
+  equatable: ^2.0.7
 
-  # Data
-  flutter_secure_storage: ^9.2.2
+  # Network/Data
+  http: ^1.3.0
+  dio: ^5.8.0+1
+  socket_io_client: ^3.0.2
+  flutter_stripe: ^11.4.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   flutter_dotenv: ^5.2.1
-
-  # Network
-  #  http: ^1.2.2
-  dio: ^5.7.0
-  socket_io_client: ^3.0.0
-  flutter_stripe: ^11.2.0
+  flutter_secure_storage: ^9.2.4
   #  googleapis: ^13.2.0
   #  extension_google_sign_in_as_googleapis_auth: ^2.0.12
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
 
-  # State
-  bloc: ^8.1.4
-  flutter_bloc: ^8.1.6
-  hydrated_bloc: ^9.1.5
-  equatable: ^2.0.5
-  logger: ^2.4.0
-
   # Platform
+  intl: ^0.20.2
   path_provider: ^2.1.5
+  os_detect: ^2.0.3
   image_picker: ^1.1.2
-  permission_handler: ^11.3.1
-  flutter_local_notifications: ^18.0.0
+  file_picker: ^9.0.2
+  video_player: ^2.9.3
+  permission_handler: ^11.4.0
+  flutter_local_notifications: ^18.0.1
   #  device_info_plus: ^11.1.0
-  share_plus: ^10.1.1
-  os_detect: ^2.0.2
-  app_links: ^6.3.2
+  share_plus: ^10.1.4
+  app_links: ^6.4.0
 
   # UI
+  flutter_svg: ^2.0.17
   circular_image: ^0.0.6
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
-  fluttertoast: ^8.2.8
+  fluttertoast: ^8.2.12
+  font_awesome_flutter: ^10.8.0
   shimmer: ^3.0.0
-  lottie: ^3.1.3
+  lottie: ^3.3.1
   badges: ^3.1.2
+  email_validator: ^3.0.0
 
   # Package
-  rename_app: ^1.6.1
-  change_app_package_name: ^1.4.0
+  rename_app: ^1.6.2
+  change_app_package_name: ^1.5.0
 
 dev_dependencies:
   flutter_test:
