Add dartz package and update pubspec files and add new order_status enum and form state.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_dotenv: ^5.2.1
   flutter_secure_storage: ^9.2.4
+  dartz: ^0.10.1
   #  googleapis: ^13.2.0
   #  extension_google_sign_in_as_googleapis_auth: ^2.0.12
   firebase_core: ^3.6.0
@@ -58,7 +59,7 @@ dependencies:
   intl: ^0.20.2
   path_provider: ^2.1.5
   os_detect: ^2.0.3
-  image_picker: ^1.1.2
+  image_picker: ^1.1.2 #remove
   file_picker: ^9.0.2
   video_player: ^2.9.3
   permission_handler: ^11.4.0
@@ -69,15 +70,15 @@ dependencies:
 
   # UI
   flutter_svg: ^2.0.17
-  circular_image: ^0.0.6
+  circular_image: ^0.0.6 #use mine
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
   fluttertoast: ^8.2.12
   font_awesome_flutter: ^10.8.0
   shimmer: ^3.0.0
   lottie: ^3.3.1
-  badges: ^3.1.2
-  email_validator: ^3.0.0
+  badges: ^3.1.2 #use mine
+  email_validator: ^3.0.0 #use mine
 
   # Package
   rename_app: ^1.6.2
@@ -112,6 +113,15 @@ flutter:
     - assets/
     - assets/images/
     - assets/animations/
+
+    - assets/icons/
+
+    - assets/icons/svg/
+    - assets/icons/svg/main/
+    - assets/icons/svg/navigation/
+
+    - assets/icons/img/
+
     - .env.dev
     - .env.prod
 
