--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   hydrated_bloc: ^10.0.0
   equatable: ^2.0.7
+  get_it: ^8.0.3
 
   # Network/Data
   http: ^1.3.0
@@ -60,10 +61,10 @@ dependencies:
   path_provider: ^2.1.5
   os_detect: ^2.0.3
   image_picker: ^1.1.2 #remove
-  file_picker: ^9.0.2
+  file_picker: ^9.2.0
   video_player: ^2.9.3
   permission_handler: ^11.4.0
-  flutter_local_notifications: ^18.0.1
+  flutter_local_notifications: ^19.0.0
   #  device_info_plus: ^11.1.0
   share_plus: ^10.1.4
   app_links: ^6.4.0
