--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 #  sdk: ^3.5.3
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -65,6 +65,7 @@ dependencies:
   video_player: ^2.9.3
   permission_handler: ^11.4.0
   flutter_local_notifications: ^19.0.0
+  package_info_plus: ^8.3.0
   #  device_info_plus: ^11.1.0
   share_plus: ^10.1.4
   app_links: ^6.4.0
