--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,8 @@ dependencies:
   # Network/Data
   http: ^1.3.0
   dio: ^5.8.0+1
-  socket_io_client: ^3.0.2
-  flutter_stripe: ^11.4.0
+  socket_io_client: ^3.1.1
+  flutter_stripe: ^11.5.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_dotenv: ^5.2.1
@@ -53,18 +53,18 @@ dependencies:
   dartz: ^0.10.1
   #  googleapis: ^13.2.0
   #  extension_google_sign_in_as_googleapis_auth: ^2.0.12
-  firebase_core: ^3.6.0
-  firebase_messaging: ^15.1.3
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
 
   # Platform
   intl: ^0.20.2
   path_provider: ^2.1.5
   os_detect: ^2.0.3
   image_picker: ^1.1.2 #remove
-  file_picker: ^9.2.0
-  video_player: ^2.9.3
-  permission_handler: ^11.4.0
-  flutter_local_notifications: ^19.0.0
+  file_picker: ^10.1.2
+  video_player: ^2.9.5
+  permission_handler: ^12.0.0+1
+  flutter_local_notifications: ^19.1.0
   package_info_plus: ^8.3.0
   #  device_info_plus: ^11.1.0
   share_plus: ^10.1.4
